# ClipVault

./: .gitignore  AGENTS.md  README.md  clipvault.ps1  pyproject.toml
clipvault/: adapters.py  asr.py  asr_worker.py  auth.py  cli.py  creators.py  credentials.py  exporters.py  library.py  login.py  models.py  platforms.py  postprocess.py  runtime_logs.py  series_rules.py  subtitles.py  text.py
clipvault/ui/: __init__.py  server.py
docs/: README.md  mvp-development-summary.md  user-guide.md
docs/plan/: phase6-ui-spec.md  phase7-quality-and-docs.md  phase8-source-collection-workflow.md  roadmap.md
logs/development/: 2026-05-04-phase3-step1-platform-boundary.md  2026-05-04-phase3-step2-subtitle-language.md  2026-05-04-phase3-step3-youtube-validation.md  2026-05-04-phase4-core-indexes.md  2026-05-04-phase4-step1-manual-series.md  2026-05-04-phase4-step3-review-hardening.md  2026-05-04-phase4-step3-series-rules.md  2026-05-04-phase4-step4-index-rebuild.md  2026-05-04-phase5-step1-creator-registry.md  2026-05-04-phase5-step2-creator-fetch-preview.md  2026-05-04-phase5-step3-fetch-status-marking.md  2026-05-04-phase5-step4-transcript-job-queue.md  2026-05-04-project-init-and-roadmap.md  2026-05-04-review-fixes.md  2026-05-05-bilibili-cookies-support.md  2026-05-05-bilibili-sample-update.md  2026-05-05-platform-adapter-boundary.md  (+15 more)
tests/: test_adapters.py  test_asr.py  test_auth.py  test_cli.py  test_creators.py  test_credentials.py  test_exporters.py  test_library.py  test_login.py  test_platforms.py  test_series_rules.py  test_subtitles.py  test_ui_server.py
(+6 files in other folders)
