[project]
name = "clipvault"
version = "0.1.0"
description = "Local-first video transcript vault with subtitle extraction and ASR fallback."
requires-python = ">=3.10"
dependencies = [
  "yt-dlp>=2026.3.17",
  "faster-whisper>=1.2.1",
  "segno>=1.6",
  "httpx>=0.27",
  "opencc-python-reimplemented>=0.1.7",
]

[project.optional-dependencies]
windows-nvidia = [
  "nvidia-cublas-cu12>=12.9.2.10",
  "nvidia-cuda-nvrtc-cu12>=12.9.86",
]

[tool.setuptools.packages.find]
include = ["clipvault*"]

[project.scripts]
clipvault = "clipvault.cli:main"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"
